objects/Loop__SecureField__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Conceal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this option is checked, data entered in this field during the signing process will not be visible to any of the signers or the sender.</inlineHelpText>
        <label>Conceal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Font__c</fullName>
        <label>Font</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arial</fullName>
                </value>
                <value>
                    <fullName>Arial Narrow</fullName>
                </value>
                <value>
                    <fullName>Calibri</fullName>
                </value>
                <value>
                    <fullName>Courier New</fullName>
                </value>
                <value>
                    <fullName>Garamond</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                </value>
                <value>
                    <fullName>Lucida Console</fullName>
                </value>
                <value>
                    <fullName>Tahoma</fullName>
                </value>
                <value>
                    <fullName>Times New Roman</fullName>
                </value>
                <value>
                    <fullName>Trebuchet</fullName>
                </value>
                <value>
                    <fullName>Verdana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__GroupName__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Height__c</fullName>
        <inlineHelpText>in pixels</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__ListItems__c</fullName>
        <inlineHelpText>This is a semicolon delimited list of pick list items.</inlineHelpText>
        <label>List Items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Recipient__c</fullName>
        <label>Recipient</label>
        <referenceTo>Loop__dsRecipient__c</referenceTo>
        <relationshipLabel>Secure Fields</relationshipLabel>
        <relationshipName>Secure_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__ToolTip__c</fullName>
        <label>Tool Tip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Type__c</fullName>
        <inlineHelpText>This applies a standard validation pattern to the secure field.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plain Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Zip-4</fullName>
                </value>
                <value>
                    <fullName>Signer Attachment</fullName>
                </value>
                <value>
                    <fullName>Approve Button</fullName>
                </value>
                <value>
                    <fullName>Decline Button</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loop__Update_Field__c</fullName>
        <label>Update Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__ValidationMessage__c</fullName>
        <inlineHelpText>This error message will be displayed if the input does not match the validation pattern.</inlineHelpText>
        <label>Validation Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__ValidationPattern__c</fullName>
        <inlineHelpText>Insert a Regular Expression (RegEx) pattern to validate the input. Learn more about Regular Expressions at www.regexlib.com.</inlineHelpText>
        <label>Validation Pattern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Value__c</fullName>
        <inlineHelpText>This can be made dynamic by using tags from the Field Tagger.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Width__c</fullName>
        <inlineHelpText>in pixels</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__X_Offset__c</fullName>
        <inlineHelpText>Positive X Offset values move the tab right on the page.</inlineHelpText>
        <label>X Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Y_Offset__c</fullName>
        <inlineHelpText>Positive Y Offset values move the tab down on the page.</inlineHelpText>
        <label>Y Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__dsParentField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The value of the parent field will determine whether this field appears while the recipient is signing.</inlineHelpText>
        <label>Parent Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Loop__Recipient__c</field>
                <operation>equals</operation>
                <valueField>Loop__SecureField__c.Loop__Recipient__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Loop__SecureField__c</referenceTo>
        <relationshipLabel>Conditional Fields</relationshipLabel>
        <relationshipName>Conditional_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__dsParentValue__c</fullName>
        <inlineHelpText>If the parent field equals this value, this secure field will be visible while the recipient is signing.</inlineHelpText>
        <label>Parent Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Secure Field</label>
    <nameField>
        <label>Field Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secure Fields</pluralLabel>
    <recordTypes>
        <fullName>Loop__Checkbox</fullName>
        <active>true</active>
        <description>Checkbox field</description>
        <label>Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__List</fullName>
        <active>true</active>
        <description>A list or drop down with two or more possible options</description>
        <label>List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Other</fullName>
        <active>true</active>
        <description>Other types such as Signer Attachment, Approve Button, and Decline Button</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Radio</fullName>
        <active>true</active>
        <description>Radio field</description>
        <label>Radio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Text</fullName>
        <active>true</active>
        <description>Text field (e.g. plain text, email, date, number, ssn, zip, and zip-4)</description>
        <label>Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loop__Text_Area</fullName>
        <active>true</active>
        <description>Text Area field</description>
        <label>Text Area</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>